--- a/assets/scripts/templates/ingredient-listing.handlebars
+++ b/assets/scripts/templates/ingredient-listing.handlebars
@@ -12,7 +12,8 @@
       No author provided.
     {{/if}}
     </p>
-    <button type="submit" class="btn btn-default">Remove</button>
+    <button type="submit" class="btn btn-default" id="delete">Remove</button>
+    <button type="submit" class="btn btn-default" id="edit">Edit</button>
     </section>
 
   </div>
