--- a/assets/scripts/templates/ingredient-listing.handlebars
+++ b/assets/scripts/templates/ingredient-listing.handlebars
@@ -12,8 +12,8 @@
       No author provided.
     {{/if}}
     </p>
-    <button type="submit" class="btn btn-default" id="delete">Remove</button>
-    <button type="submit" class="btn btn-default" id="edit">Edit</button>
+    <button type="submit" class="btn btn-default delete">Remove</button>
+    <button type="submit" class="btn btn-default edit" >Edit</button>
     </section>
 
   </div>
