crud for ingredient complete

--- a/assets/scripts/templates/fridge-listing.handlebars
+++ b/assets/scripts/templates/fridge-listing.handlebars
@@ -1,6 +1,8 @@
 {{#each fridges as |fridge|}}
+
+  <!--
   {{log fridge}}
-  <!-- {{> partial}}
+   {{> partial}}
   Don't uncomment yet
   store.user.id === data.fridges.fridges.user_id-->
 
