--- a/assets/scripts/templates/ingredient-listing.handlebars
+++ b/assets/scripts/templates/ingredient-listing.handlebars
@@ -12,6 +12,7 @@
       No author provided.
     {{/if}}
     </p>
+    <button type="submit" class="btn btn-default">Remove</button>
     </section>
 
   </div>
