testing deploy for proj4

--- a/assets/scripts/templates/ingredient-listing.handlebars
+++ b/assets/scripts/templates/ingredient-listing.handlebars
@@ -1,7 +1,7 @@
 {{#each ingredients as |ingredient|}}
-  {{log ingredient}}
-  <!-- {{> partial}}
-  Don't uncomment yet -->
+  <!--{{log ingredient}}
+    {{> partial}}
+    Don't uncomment yet -->
 
   <div>
     <h1 data-id="{{ingredient.id}}"> <small>{{ingredient.name}}</small></h1>
